--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,12 @@ uuid = "1feb10ce-27b0-4602-8644-47e2eacc7a3e"
 authors = ["ArrogantGao <gaoxuanzhao@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
+TreeWidthSolver = "7d267fc5-9ace-409f-a54c-cd2374872a55"
+
 [compat]
+OMEinsum = "0.8.4"
 julia = "1.6.7"
 
 [extras]
