--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,18 @@ authors = ["ArrogantGao <gaoxuanzhao@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+GenericTensorNetworks = "3521c873-ad32-4bb4-b63d-f4f178f42b49"
 OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 TreeWidthSolver = "7d267fc5-9ace-409f-a54c-cd2374872a55"
 
 [compat]
+GenericTensorNetworks = "2.2.0"
 OMEinsum = "0.8.4"
 julia = "1.6.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Random"]
