--- a/example/Project.toml
+++ b/example/Project.toml
@@ -1,6 +1,14 @@
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 GenericTensorNetworks = "3521c873-ad32-4bb4-b63d-f4f178f42b49"
+GraphIO = "aa1b3936-2fda-51b9-ab35-c553d3a640a2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
-OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
+KaHyPar = "2a6221f6-aa48-11e9-3542-2d9e0ef01880"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 TDAnalyze = "1feb10ce-27b0-4602-8644-47e2eacc7a3e"
 TreeWidthSolver = "7d267fc5-9ace-409f-a54c-cd2374872a55"
